updated style for front page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,22 @@
 /* Compensate for the fixed nav bar at the top */
 body { padding-top: 50px; }
 
-section {margin: 10px 0 15px;}
-section#about, section#contact{margin-top:3em;}
-section h1{font-size: 42pt; margin-bottom:25px;}
+.general_section {
+    background:rgba(255, 212, 77, 1);
+    height:2em;
+    width: 100%;
+    padding: 1em 0 2em 1em;
+}
+
+section h1.section_header_label{
+    background-color: rgb(255, 212, 77);
+    height:100%;
+    padding: 20px;
+}
+section h1.general_section{
+    background:black;
+    color:white;
+}
 
 footer {
     margin-top:2em;
@@ -14,11 +27,4 @@ footer {
 footer section {
     padding:3em 0 3em 3em;
     background-color: rgb(255, 212, 77);
-}
-
-.divide {
-    background: url("../images/triangle-line-shadow.png") repeat-x;
-    width:100%;
-    padding:2em;
-    margin-top:2em;
 }
