--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,6 @@
 body { padding-top: 50px; }
 
 .general_section {
-    background:rgba(255, 212, 77, 1);
     height:2em;
     width: 100%;
     padding: 1em 0 2em 1em;
@@ -14,7 +13,7 @@ section h1.section_header_label{
     padding: 20px;
 }
 section h1.general_section{
-    background:black;
+    background:rgb(199, 86, 58);
     color:white;
 }
 
